--- a/styl.css
+++ b/styl.css
@@ -1,5 +1,9 @@
-body {
-  background-color: beige;
-  display: flex;
-  justify-content: center;
+.b{
+  color:peru;
+  text-align: center;
+}
+
+.a{
+  color: blueviolet;
+  background-color: gold;
 }
